# Niji

./: .gitignore  LICENSE  README.md
candle-gemma/: Cargo.toml  README.md
candle-gemma/examples/: gemma-gguf.rs  model_gemma.rs  quantized-gemma.rs  quantized_gemma3_model.rs
go/: Dockerfile
go/app/: go.mod  go.sum  main.go
python/: Dockerfile  pyproject.toml
python/app/: main.py
rust/: Dockerfile
rust/app/: Cargo.toml
rust/app/src/: main.rs
