[package]
name = "candle-gemma"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda", "candle-examples/cuda"]
mkl = ["candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = ["candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
candle = { package = "candle-core", git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }

anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"

[profile.release]
lto = false
incremental = true
codegen-units = 16
